Hardcoded versie Overzicht pagina's

--- a/HotelService/HotelService/Views/Home/Index.cshtml
+++ b/HotelService/HotelService/Views/Home/Index.cshtml
@@ -9,7 +9,12 @@
     </div>
     <div id="menuwrap">
         <div id="menu">
-            <p> Menu item 1 | Menu item 2 | Menu item 3 </p>
+            <p> 
+                @Html.ActionLink("Home", "Index", "Home", new { @class="roundedButton"}) | 
+                @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
+                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
+            </p>
         </div>
     </div>
     <div id="contentwrap">
