--- a/HotelService/HotelService/Content/591645.css
+++ b/HotelService/HotelService/Content/591645.css
@@ -1,13 +1,28 @@
 body {
     font-family: Calibri, Verdana, Arial, Helvetica, sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     color:#333
+}
+
+td {
+    font-size: 12px;
 }
 
 p {
     padding-top: 2px;
     padding-left: 5px;
 }
+
+a {
+    color: #333;
+    font-size: 13px;
+}
+
+a:active {
+    color: #cdeaf7;
+    font-size: 13px;
+}
+
 
 h1 {
     font-size: 32px;
@@ -26,11 +41,11 @@ h2, h3, h4, h5, h6 {
 
 #wrapper {
     margin: 0 auto;
-    width: 1000px;
+    width: 1100px;
 }
 
 #headerwrap {
-    width: 1000px;
+    width: 1100px;
     float: left;
 }
 
@@ -46,7 +61,7 @@ h2, h3, h4, h5, h6 {
 }
 
 #menuwrap {
-    width: 1000px;
+    width: 1100px;
     float: left;
     clear: both;
 }
@@ -65,7 +80,7 @@ h2, h3, h4, h5, h6 {
 }
 
 #contentwrap {
-    width: 1000px;
+    width: 1100px;
     float: left;
 }
 
@@ -80,7 +95,7 @@ h2, h3, h4, h5, h6 {
 }
 
 #footerwrap {
-    width: 1000px;
+    width: 1100px;
     float: left;
     clear: both;
 }
