--- a/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
@@ -3,25 +3,58 @@
 @{
     ViewBag.Title = "BoekingOverzicht";
 }
+<link href="../Content/591645.css" rel="stylesheet" type="text/css" />
+<div id="wrapper">
+    <div id="headerwrap">
+        <div id="header">
+            <h1>HotelService </h1>
+        </div>
+    </div>
+    <div id="menuwrap">
+        <div id="menu">
+            <p>
+                @Html.ActionLink("Home", "Index", "Home") | 
+                @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
+                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
+            </p>
+        </div>
+    </div>
+    <div id="contentwrap">
+        <div id="content">
+            <h2>@ViewBag.Title</h2>
+            
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+            <table>
+                <tr>
+                    <th></th>
+                </tr>
 
-<h2>BoekingOverzicht</h2>
+                @*@foreach (var item in Model) { *@
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table>
-    <tr>
-        <th></th>
-    </tr>
+                 @for (int i = 0; i < 10; i++)
+                {
+                    <tr>
+                        <td>1</td>
+                        <td>18-12-2013</td>
+                        <td>25-12-2013</td>
+                        <td>1234</td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                            @Html.ActionLink("Klant Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        </td>
+                    </tr>
+                }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
-
-</table>
+            </table>
+        </div>
+    </div>
+    <div id="footerwrap">
+        <div id="footer">
+            <p>Martijn de Fijter en Suzanne Jenniskens - 2013/2014 - 42IN06SOc</p>
+        </div>
+    </div>
+</div>
