--- a/HotelService/HotelService/Views/Gast/GastOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Gast/GastOverzicht.cshtml
@@ -4,24 +4,69 @@
     ViewBag.Title = "GastOverzicht";
 }
 
-<h2>GastOverzicht</h2>
+<link href="../Content/591645.css" rel="stylesheet" type="text/css" />
+<div id="wrapper">
+    <div id="headerwrap">
+        <div id="header">
+            <h1>HotelService </h1>
+        </div>
+    </div>
+    <div id="menuwrap">
+        <div id="menu">
+            <p>
+                @Html.ActionLink("Home", "Index", "Home") | 
+                @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
+                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
+            </p>
+        </div>
+    </div>
+    <div id="contentwrap">
+        <div id="content">
+            <h2>@ViewBag.Title</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table>
-    <tr>
-        <th></th>
-    </tr>
+            <p>
+                @Html.ActionLink("Create New", "Create")
+            </p>
+            <table>
+                <tr>
+                    <th>Voornaam</th>
+                    <th>Achternaam</th>
+                    <th>Geboortedatum</th>
+                    <th>M/V</th>
+                    <th>Adres</th>
+                    <th>Postcode</th>
+                    <th>Woonplaats</th>
+                    <th>E-mail</th>
+                </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+                @*@foreach (var item in Model) { *@
 
-</table>
+                @for (int i = 0; i < 10; i++)
+                {
+                    <tr>
+                        <td>Suzanne</td>
+                        <td>Jenniskens</td>
+                        <td>5-4-1996</td>
+                        <td>V</td>
+                        <td>Onderwijsboulevard 103X</td>
+                        <td>5223 DE</td>
+                        <td>'s-Hertogenbosch</td>
+                        <td>swhjenni@student.avans.nl</td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                            @Html.ActionLink("Klant Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        </td>
+                    </tr>
+                }
+
+            </table>
+        </div>
+    </div>
+    <div id="footerwrap">
+        <div id="footer">
+            <p>Martijn de Fijter en Suzanne Jenniskens - 2013/2014 - 42IN06SOc</p>
+        </div>
+    </div>
+</div>
