--- a/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "BoekingOverzicht";
 }
-<link href="../Content/591645.css" rel="stylesheet" type="text/css" />
+<link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
 <div id="wrapper">
     <div id="headerwrap">
         <div id="header">
@@ -29,7 +29,10 @@
             </p>
             <table>
                 <tr>
-                    <th></th>
+                    <th>ID</th>
+                    <th>Startdatum</th>
+                    <th>Einddatum</th>
+                    <th>KlantID</th>
                 </tr>
 
                 @*@foreach (var item in Model) { *@
