--- a/HotelService/HotelService/Views/Gast/GastOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Gast/GastOverzicht.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "GastOverzicht";
 }
 
-<link href="../Content/591645.css" rel="stylesheet" type="text/css" />
+<link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
 <div id="wrapper">
     <div id="headerwrap">
         <div id="header">
@@ -55,7 +55,6 @@
                         <td>swhjenni@student.avans.nl</td>
                         <td>
                             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                            @Html.ActionLink("Klant Details", "Details", new { /* id=item.PrimaryKey */ }) |
                             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                         </td>
                     </tr>
