--- a/HotelService/HotelService/Views/Kamer/KamerOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Kamer/KamerOverzicht.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Overzicht";
 }
 
-<link href="../Content/591645.css" rel="stylesheet" type="text/css" />
+<link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
 <div id="wrapper">
     <div id="headerwrap">
         <div id="header">
