--- a/HotelService/HotelService/Views/Kamer/Create.cshtml
+++ b/HotelService/HotelService/Views/Kamer/Create.cshtml
@@ -1,6 +1,5 @@
-﻿@model HotelService.Models.Gast
-@{
-    ViewBag.Title = "Details gast";
+﻿@{
+    ViewBag.Title = "Nieuwe Kamer";
 }
 
 <link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
