--- a/HotelService/HotelService/Views/Boeking/Edit.cshtml
+++ b/HotelService/HotelService/Views/Boeking/Edit.cshtml
@@ -1,6 +1,5 @@
-﻿@model HotelService.Models.Gast
-@{
-    ViewBag.Title = "Details gast";
+﻿@{
+    ViewBag.Title = "Wijzig Boeking";
 }
 
 <link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
