--- a/HotelService/HotelService/Views/Home/KlantNotAllowed.cshtml
+++ b/HotelService/HotelService/Views/Home/KlantNotAllowed.cshtml
@@ -2,17 +2,19 @@
     ViewBag.Title = "Index";
 }
 
-<link href="./Content/StyleSheet.css" rel="stylesheet" type="text/css" />
+<link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
 <div id="wrapper">
     <div id="headerwrap">
         <div id="header">
             <h1>HotelService </h1>
         </div>
     </div>
-
+    
     <div id="contentwrap">
         <div id="content">
-            <h2>@ViewBag.Title</h2>
+            <h2>Sorry</h2>
+            U heeft de rechten niet om deze pagina te bezoeken <br />
+            Keer terug naar @Html.ActionLink("Home voor klanten", "KlantIndex", "Home") <br />
         </div>
     </div>
     <div id="footerwrap">
