--- a/HotelService/HotelService/Views/Home/KlantIndex.cshtml
+++ b/HotelService/HotelService/Views/Home/KlantIndex.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model DataAccessLayer.Gebruiker
+
+@{
     ViewBag.Title = "Index";
 }
 
@@ -12,9 +14,10 @@
     <div id="menuwrap">
         <div id="menu">
             <p>
-                @Html.ActionLink("Home", "Index", "Home") | 
-                @Html.ActionLink("Bekijk onze kamers", "KamerOverzicht", "Kamer") | 
-                @*@Html.ActionLink("Bekijk uw vorige boekingen")*@
+                
+                @Html.ActionLink("Home", "KlantIndex", "Home") | 
+                @Html.ActionLink("Bekijk onze kamers", "KlantKamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Bekijk uw vorige boekingen", "KlantBoekingOverzicht", "Boeking") | 
                 @Html.ActionLink("Log uit", "Logoff", "Home")
             </p>
         </div>
@@ -22,8 +25,7 @@
     <div id="contentwrap">
         <div id="content">
             <h2>@ViewBag.Title</h2>
-
-            @Html.ActionLink("Medewerkers", "MedewerkersIndex", "Home")
+            <p>Welkom terug bij onze hotelservice!</p>
         </div>
     </div>
     <div id="footerwrap">
