--- a/HotelService/HotelService/Views/Boeking/KlantBoekingOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Boeking/KlantBoekingOverzicht.cshtml
@@ -25,7 +25,7 @@
             <h2>@ViewBag.Title</h2>
             
             <p>
-                @Html.ActionLink("Create New", "Create")
+                @Html.ActionLink("Boek een nieuw verblijf", "Create")
             </p>
             <table>
                 <tr>
