--- a/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
@@ -14,7 +14,7 @@
         <div id="menu">
             <p>
                 @Html.ActionLink("Home", "Index", "Home") | 
-                @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Kamers", "KlantKamerOverzicht", "Kamer") | 
                 @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
                 @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
             </p>
