--- a/HotelService/HotelService/Views/Boeking/KlantBoekingOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Boeking/KlantBoekingOverzicht.cshtml
@@ -14,7 +14,7 @@
         <div id="menu">
             <p>
                 @Html.ActionLink("Home", "KlantIndex", "Home") | 
-                @Html.ActionLink("Bekijk onze kamers", "KamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Bekijk onze kamers", "KlantKamerOverzicht", "Kamer") | 
                 @Html.ActionLink("Bekijk uw vorige boekingen", "KlantBoekingOverzicht", "Boeking") | 
                 @Html.ActionLink("Log uit", "Logoff", "Home")
             </p>
