--- a/HotelService/HotelService/Views/Boeking/Create.cshtml
+++ b/HotelService/HotelService/Views/Boeking/Create.cshtml
@@ -10,10 +10,10 @@
     <div id="menuwrap">
         <div id="menu">
             <p> 
-                @Html.ActionLink("Home", "Index", "Home") | 
-                @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
-                @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
-                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
+                @Html.ActionLink("Home", "KlantIndex", "Home") | 
+                @Html.ActionLink("Bekijk onze kamers", "KamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Bekijk uw vorige boekingen", "KlantBoekingOverzicht", "Boeking") | 
+                @Html.ActionLink("Log uit", "Logoff", "Home")
             </p>
         </div>
     </div>
