--- a/HotelService/HotelService/Views/Home/Index.cshtml
+++ b/HotelService/HotelService/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                 <p>Wachtwoord</p>                
                 @Html.PasswordFor(model => model.wachtwoord)
                 <br />
-                <input type="submit", value="Log in" formaction="Home/Login"/>
+                <input type="submit" value="Log in" formaction="/Home/Login"/>
             }
             <h2>OF:</h2>
             <p>
