--- a/HotelService/HotelService/Views/Boeking/Create.cshtml
+++ b/HotelService/HotelService/Views/Boeking/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HotelService.Models.Boeking
+@{
     ViewBag.Title = "Nieuwe Boeking";
 }
 
@@ -20,7 +21,36 @@
     <div id="contentwrap">
         <div id="content">    
             <h2>@ViewBag.Title</h2>
-            <p>Hier dus de inhoud van deze pagina invullen</p>
+            <p>Hier kun je een nieuwe boeking aanmaken</p>
+
+            @using (Html.BeginForm())
+            { 
+                <fieldset>
+	                <legend>Nieuwe boeking aanmaken</legend>
+                    
+	                <p>
+                        Kamernummer
+                        @Html.EditorFor(model => model.KamerNummer)
+	                </p>
+
+                    <p>
+                        KlantID
+                        @Html.EditorFor(model => model.KlantID)
+                    </p>
+
+                    <p>
+                        Startdatum
+                        @Html.EditorFor(model => model.Startdatum)
+                    </p>
+
+                    <p>
+                        Einddatum
+                        @Html.EditorFor(model => model.Einddatum)
+                    </p>
+
+                    <p><input type="submit" value="Nieuwe boeking aanmaken" /></p>
+                </fieldset>
+            }
         </div>
     </div>
     <div id="footerwrap">
