--- a/HotelService/HotelService/Views/Gast/Create.cshtml
+++ b/HotelService/HotelService/Views/Gast/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HotelService.Models.Gast
+﻿@model DataAccessLayer.Klanten
 @{
     ViewBag.Title = "Nieuwe Gast";
 }
@@ -23,49 +23,63 @@
             <h2>@ViewBag.Title</h2>
             <p>Vul hieronder de informatie van de nieuwe gast in.</p>
             
-            @using (Html.BeginForm())
+            @using (Html.BeginForm("Created", "Gast", FormMethod.Post))
             { 
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true)
                 <fieldset>
 	                <legend>Nieuwe gast</legend>
                     
 	                <p>
                         Voornaam:
                         @Html.EditorFor(model => model.Voornaam)
+                        @Html.ValidationMessageFor(model => model.Voornaam)
+	                </p>
+                    <p>
+                        Tussenvoegsel:
+                        @Html.EditorFor(model => model.tussenvoegsel)
 	                </p>
 
                     <p>
                         Achternaam
                         @Html.EditorFor(model => model.Achternaam)
+                        @Html.ValidationMessageFor(model => model.Achternaam)
                     </p>
 
                     <p>
                         Geboortedatum (DD-MM-JJ)
                         @Html.EditorFor(model => model.Geboortedatum)
+                        @Html.ValidationMessageFor(model => model.Geboortedatum)
                     </p>
 
                     <p>
                         Man/Vrouw
                         @Html.EditorFor(model => model.Geslacht)
+                        @Html.ValidationMessageFor(model => model.Geslacht)
                     </p>
 
                     <p>
                         Adres
                         @Html.EditorFor(model => model.Adres)
+                        @Html.ValidationMessageFor(model => model.Adres)
                     </p>
 
                     <p>
                         Postcode
                         @Html.EditorFor(model => model.Postcode)
+                        @Html.ValidationMessageFor(model => model.Postcode)
                     </p>
 
                     <p>
                         Woonplaats
                         @Html.EditorFor(model => model.Woonplaats)
+                        @Html.ValidationMessageFor(model => model.Woonplaats)
                     </p>
 
                     <p>
                         E-mailadres
                         @Html.EditorFor(model => model.Email)
+                        @Html.ValidationMessageFor(model => model.Email)
                     </p>
 
 	                <p><input type="submit" value="Nieuwe gast aanmaken" /></p>
