--- a/HotelService/HotelService/Views/Kamer/Create.cshtml
+++ b/HotelService/HotelService/Views/Kamer/Create.cshtml
@@ -1,53 +1,65 @@
 ﻿@model HotelService.Models.Kamer
 @{
-    ViewBag.Title = "Nieuwe Kamer";
+	ViewBag.Title = "Nieuwe Kamer";
 }
 
 <link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
 <div id="wrapper">
-    <div id="headerwrap">
-        <div id="header"> <h1> HotelService </h1></div>
-    </div>
-    <div id="menuwrap">
-        <div id="menu">
-            <p> 
-                @Html.ActionLink("Home", "Index", "Home") | 
-                @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
-                @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
-                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
-            </p>
-        </div>
-    </div>
-    <div id="contentwrap">
-        <div id="content">    
-            <h2>@ViewBag.Title</h2>
-            <p>Hier kun je een kamer aanmaken.</p>
-            @using (Html.BeginForm())
-            { 
-                <fieldset>
-	                <legend>Nieuwe kamer</legend>
-                    
-	                <p>
-                        Aantal Personen
-                        @Html.EditorFor(model => model.AantalPersonen)
-	                </p>
+	<div id="headerwrap">
+		<div id="header"> <h1> HotelService </h1></div>
+	</div>
+	<div id="menuwrap">
+		<div id="menu">
+			<p> 
+				@Html.ActionLink("Home", "Index", "Home") | 
+				@Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
+				@Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
+				@Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
+			</p>
+		</div>
+	</div>
+	<div id="contentwrap">
+		<div id="content">    
+			<h2>@ViewBag.Title</h2>
+			<p>Hier kun je een kamer aanmaken.</p>
+			@using (Html.BeginForm("Created", "Kamer", FormMethod.Post))
+			{ 
+                @Html.AntiForgeryToken()
+				@Html.ValidationSummary(true)
+                
+				<fieldset>
+					<legend>Nieuwe kamer</legend>
+					
+					<p>
+						Aantal Personen
+						@Html.EditorFor(model => model.AantalPersonen)
+                        @Html.ValidationMessageFor(model => model.AantalPersonen)
+					</p>
+
+					<p>
+						Kamernummer
+						@Html.EditorFor(model => model.KamerNummer)
+                        @Html.ValidationMessageFor(model => model.KamerNummer)
+					</p>
+
+					<p>
+						Actuele prijs
+						@Html.EditorFor(model => model.ActuelePrijs)
+                        @Html.ValidationMessageFor(model => model.ActuelePrijs)
+					</p>
 
                     <p>
-                        Kamernummer
-                        @Html.EditorFor(model => model.KamerNummer)
-                    </p>
+                        Minimumprijs
+                        @Html.EditorFor(model => model.MinimumPrijs)
+                        @Html.ValidationMessageFor(model => model.MinimumPrijs)
+                                                    </p>
 
-                    <p>
-                        Prijs per nacht
-                        @Html.EditorFor(model => model.PrijsPerNacht)
-                    </p>
-
-                    <p><input type="submit" value="Nieuwe kamer aanmaken" /></p>
-                </fieldset>
-            }
-        </div>
-    </div>
-    <div id="footerwrap">
-        <div id="footer"> <p>Martijn de Fijter en Suzanne Jenniskens - 2013/2014 - 42IN06SOc</p></div>
-    </div>
+					<p><input type="submit" value="Nieuwe kamer aanmaken" /></p>
+				</fieldset>
+			}
+		</div>
+	</div>
+	<div id="footerwrap">
+		<div id="footer"> <p>Martijn de Fijter en Suzanne Jenniskens - 2013/2014 - 42IN06SOc</p></div>
+	</div>
 </div>
