Menu fixes en Delete scherm allemaal popup

--- a/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
+++ b/HotelService/HotelService/Views/Boeking/BoekingOverzicht.cshtml
@@ -13,10 +13,11 @@
     <div id="menuwrap">
         <div id="menu">
             <p>
-                @Html.ActionLink("Home", "Index", "Home") | 
+                @Html.ActionLink("Home", "MedewerkersIndex", "Home") | 
                 @Html.ActionLink("Kamers", "KlantKamerOverzicht", "Kamer") | 
                 @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
-                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
+                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking") |
+                @Html.ActionLink("Log uit", "Logoff", "Home")
             </p>
         </div>
     </div>
