--- a/HotelService/HotelService/Views/Boeking/Edit.cshtml
+++ b/HotelService/HotelService/Views/Boeking/Edit.cshtml
@@ -13,7 +13,8 @@
                 @Html.ActionLink("Home", "Index", "Home") | 
                 @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
                 @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
-                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking")
+                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking") |
+                @Html.ActionLink("Log uit", "Logoff", "Home")
             </p>
         </div>
     </div>
