--- a/HotelService/HotelService/Views/Gast/Delete.cshtml
+++ b/HotelService/HotelService/Views/Gast/Delete.cshtml
@@ -3,6 +3,6 @@
 }
 
 <h2>Delete</h2>
-<p style="text-align:center"> Weet je zeker dat je de boeking wilt verwijderen?</p>
+<p style="text-align:center"> Weet je zeker dat je deze klant wilt verwijderen?</p>
 <button>Cancel</button>
 <button style="text-align:right">OK</button>
