--- a/HotelService/HotelService/Views/Boeking/Deleted.cshtml
+++ b/HotelService/HotelService/Views/Boeking/Deleted.cshtml
@@ -1,7 +1,5 @@
-﻿@model DataAccessLayer.Boekingen
-
-@{
-    ViewBag.Title = "Verwijder Boeking";
+﻿@{
+    ViewBag.Title = "Deleted";
 }
 
 <link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
@@ -25,14 +23,7 @@
     <div id="contentwrap">
         <div id="content">
             <h2>@ViewBag.Title</h2>
-            <p>@Html.DisplayFor(model => model.BoekingsNr)</p>
-            @{ int Boeking = Model.BoekingsNr; }
-            @using (Html.BeginForm("Deleted", "Boeking", new { boekingsNr= Boeking }, FormMethod.Post, null))
-            {
-                <p>Weet je zeker dat je de boeking wilt verwijderen?</p>
-                <input type="submit" value="Verwijder">
-            }
-            <a class="btn" href="~/Boeking/BoekingOverzicht">Cancel</a>
+            <p>U heeft een boeking verwijderd!</p>
         </div>
     </div>
     <div id="footerwrap">
