--- a/HotelService/HotelService/Views/Kamer/Delete.cshtml
+++ b/HotelService/HotelService/Views/Kamer/Delete.cshtml
@@ -1,8 +1,44 @@
-﻿@{
-    ViewBag.Title = "Delete Kamer";
+﻿@model DataAccessLayer.Hotelkamer
+
+@{
+    ViewBag.Title = "Verwijder Kamer";
 }
 
-<h2>Delete</h2>
-<p style="text-align:center"> Weet je zeker dat je de boeking wilt verwijderen?</p>
-<button>Cancel</button>
-<button style="text-align:right">OK</button>
+<link href="../Content/StyleSheet.css" rel="stylesheet" type="text/css" />
+<div id="wrapper">
+    <div id="headerwrap">
+        <div id="header">
+            <h1>HotelService </h1>
+        </div>
+    </div>
+    <div id="menuwrap">
+        <div id="menu">
+            <p>
+                @Html.ActionLink("Home", "Index", "Home") | 
+                @Html.ActionLink("Kamers", "KamerOverzicht", "Kamer") | 
+                @Html.ActionLink("Gasten", "GastOverzicht", "Gast") |
+                @Html.ActionLink("Boekingen", "BoekingOverzicht", "Boeking") | 
+                @Html.ActionLink("Log uit", "Logoff", "Home")
+            </p>
+        </div>
+    </div>
+    <div id="contentwrap">
+        <div id="content">
+            <h2>@ViewBag.Title</h2>
+            <p>@Html.DisplayFor(model => model.KamerNummer)</p>
+            @{ int Boeking = Model.KamerNummer; }
+            @using (Html.BeginForm("Deleted", "Kamer", new { kamerNr= Boeking }, FormMethod.Post, null))
+            {
+                <p>Weet je zeker dat je de boeking wilt verwijderen?</p>
+                <input type="submit" value="Verwijder">
+            }
+            <a class="btn" href="~/Kamer/KamerOverzicht">Cancel</a>
+        </div>
+    </div>
+    <div id="footerwrap">
+        <div id="footer">
+            <p>Martijn de Fijter en Suzanne Jenniskens - 2013/2014 - 42IN06SOc</p>
+        </div>
+    </div>
+</div>
+
