--- a/HotelService/HotelService/Views/Boeking/Edit.cshtml
+++ b/HotelService/HotelService/Views/Boeking/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model DataAccessLayer.Boekingen
+@{
     ViewBag.Title = "Wijzig Boeking";
 }
 
@@ -21,7 +22,31 @@
     <div id="contentwrap">
         <div id="content">    
             <h2>@ViewBag.Title</h2>
-            <p>Hier dus de inhoud van deze pagina invullen</p>
+            @using (Html.BeginForm("Edited", "Boeking", FormMethod.Post))
+            {
+                <p>
+                    BoekingsNummer
+                @Html.EditorFor(model => model.BoekingsNr)
+                </p>
+                <p>
+                    KamerNummer
+                @Html.EditorFor(model => model.Boeking_KamerNr)
+                </p>
+                <p>
+                    Startdatum
+                @Html.EditorFor(model => model.Startdatum)
+                </p>
+                <p>
+                    Einddatum
+                @Html.EditorFor(model => model.Einddatum)
+                </p>
+                <p>
+                    Klantnummer
+                    @Html.EditorFor(model => model.Boeking_KlantNr)
+                </p>
+                <p>
+                    <input type="submit" value="Wijzig" /></p>
+            }
         </div>
     </div>
     <div id="footerwrap">
