--- a/HotelService/HotelService/Views/Gast/Edit.cshtml
+++ b/HotelService/HotelService/Views/Gast/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model DataAccessLayer.Klanten
+@{
     ViewBag.Title = "Wijzig Klant";
 }
 
@@ -21,7 +22,47 @@
     <div id="contentwrap">
         <div id="content">    
             <h2>@ViewBag.Title</h2>
-            <p>Hier dus de inhoud van deze pagina invullen</p>
+            @using (Html.BeginForm("Edited", "Gast", FormMethod.Post))
+            {
+                <p>
+                    Klant nummer
+                @Html.EditorFor(model => model.KlantNummer)
+                </p>
+                <p>
+                    Voornaam
+                @Html.EditorFor(model => model.Voornaam)
+                </p>
+                <p>
+                    Tussenvoegsel
+                @Html.EditorFor(model => model.tussenvoegsel)
+                </p>
+                <p>
+                    Achternaam
+                @Html.EditorFor(model => model.Achternaam)
+                </p>
+                <p>
+                    Geslacht
+                @Html.EditorFor(model => model.Geslacht)
+                </p>
+                <p>
+                    Adres
+                @Html.EditorFor(model => model.Adres)
+                </p>
+                <p>
+                    Postcode
+                @Html.EditorFor(model => model.Postcode)
+                </p>
+                <p>
+                    Woonplaats
+                @Html.EditorFor(model => model.Woonplaats)
+                </p>
+                <p>
+                    Email
+                @Html.EditorFor(model => model.Email)
+                </p>
+                <p>
+                    <input type="submit" value="Wijzig" /></p>
+            }
         </div>
     </div>
     <div id="footerwrap">
